--- a/TODO
+++ b/TODO
@@ -1,5 +1,10 @@
-fast and quick:
-	- remove rectangles (incl. the editee one) upon change-picture
-
-idea for zoom
-	- zoom box created upon long-press click
+ZOOM, how to show
+    :param resample: An optional resampling filter.  This can be
+       one of :py:attr:`PIL.Image.NEAREST` (use nearest neighbour),
+       :py:attr:`PIL.Image.BILINEAR` (linear interpolation in a 2x2
+       environment), :py:attr:`PIL.Image.BICUBIC` (cubic spline
+       interpolation in a 4x4 environment), or
+       :py:attr:`PIL.Image.ANTIALIAS` (a high-quality downsampling filter).
+       If omitted, or if the image has mode "1" or "P", it is
+       set :py:attr:`PIL.Image.NEAREST`.
+    :returns: An :py:class:`~PIL.Image.Image` object.
