Added proper undo when resizing existing rectangles

--- a/TODO
+++ b/TODO
@@ -1,11 +1,15 @@
-* Handle additional shift of the zoom window to avoid unreachable borders
-* If right click while in editing, undo edit (?) and not delete recta
-* edit on mid-sides (one direction only)
-* when clicking on a dense zone, pick the closest corner for editing
+TO DO, minors
+    * Affine maps, seriously
+    * Picture loading
+    * Pic browsing
+    * Handle additional shift of the zoom window to avoid unreachable borders
+    * If right click while in editing, undo edit (?) and not delete recta
 
-* button held for one sec to activate zoom win
-* shortcut key to set rotation angle
-* shortcut key to set clip name
+PROPOSALS
+    * button held for one sec to activate zoom win
+    * shortcut key to set rotation angle
+    * shortcut key to set clip name
 
-* suggested rectangleness
+TO DO, majors
+    * suggested rectangleness
 
