Reached a working labeling mechanism

--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
-TO DO, minors
+TO DO, rectangle labeling
+    - nicer, better placed label
+    - text check on labels?
 
 PROPOSALS
     * shortcut key to set rotation angle
