A small fix in the placement of the label

--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 TO DO, rectangle labeling
-    - better placed label
+    - better placed label (centre on cursor)
     - all concerning saving/labels (file naming)
     - label visible as decoration in the rectangle
 
