Auto-rectangles brought to master branch

--- a/TODO
+++ b/TODO
@@ -2,6 +2,4 @@ TO DO, later releases
     Label decoration visible only when rectangle hovered-over
     Better placed label (centre on cursor)
     A checkerboard background when the zoom overlay image does not cover all of the zoom canvas (to plan well)
-
-TO DO, majors
-    * suggested rectangleness
+    Configuration screen
